--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "vercel": "^28.17.0"
   },
   "devDependencies": {
     "@prisma/client": "^4.11.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.3",
     "prisma": "^4.11.0",
     "ts-node-dev": "^2.0.0",
