--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "vercel": "^28.17.0"
   },
   "devDependencies": {
     "@prisma/client": "^4.11.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.15.3",
     "prisma": "^4.11.0",
     "ts-node-dev": "^2.0.0",
