--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "node-firebird": "^1.1.5",
     "vercel": "^28.17.0"
   },
   "devDependencies": {
